--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#808080</color>
+    <color name="white">#D0D0D0</color>
 </resources>
